--- a/wordpress-from-wordpress.org-download/wordpress/.htaccess
+++ b/wordpress-from-wordpress.org-download/wordpress/.htaccess
@@ -5,11 +5,11 @@
 # Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /tmp/wordpress/wordpress-from-wordpress.org-download/wordpress/
+RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /tmp/wordpress/wordpress-from-wordpress.org-download/wordpress/index.php [L]
+RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
