--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -31,7 +31,7 @@ settings:
 
 modules:
     config:
-        WebDriver:
+        WPWebDriver:
             url: 'http://127.0.0.1:8888'
             browser: chrome
             capabilities:
