--- a/.travis.yml
+++ b/.travis.yml
@@ -138,15 +138,15 @@ matrix:
         # - curl --data "user_name=USERNAMEHERE&admin_password=PasswordHere&admin_password2=PasswordHere&admin_email=username@email.addr&blog_public=checked&Submit=submit" "$WP_CEPT_SERVER/wp-admin/install.php?step=2" 
 
       script:
-        - |
-          if [[ ! -z "$WP_VERSION" ]] ; then
-            phpunit
-            WP_MULTISITE=1 phpunit
-          fi
-        - |
-          if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
-            phpcs
-          fi
+        # - |
+        #   if [[ ! -z "$WP_VERSION" ]] ; then
+        #     phpunit
+        #     WP_MULTISITE=1 phpunit
+        #   fi
+        # - |
+        #   if [[ "$WP_TRAVISCI" == "phpcs" ]] ; then
+        #     phpcs
+        #   fi
 
         - php vendor/bin/codecept build
         - php vendor/bin/codecept run --steps --debug
