--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -26,7 +26,7 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - WPWebDriver
-        # - \Helper\Acceptance
+        - \Helper\Acceptance
     config:
         WPWebDriver:
             url: 'http://127.0.0.1:8888'
