--- a/.travis.yml
+++ b/.travis.yml
@@ -177,8 +177,12 @@ matrix:
     #  env: WP_VERSION=trunk
     #- php: 5.6
     #  env: WP_TRAVISCI=phpcs
-    #- php: 5.3
-    #  env: WP_VERSION=latest
+    - php: 5.3
+     # env: WP_VERSION=latest
+     before_script:
+      - env: WP_VERSION=set_suitable
+      - env: WBC_TEST_ENV=with_sample_data
+
     #  dist: precise
 
 
