--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,11 @@ matrix:
 
     - language: php
       php: 7.2
+
+    # - php:
+    #   - 7.2 
+    #   - 5.3
+
       # env: WP_VERSION=latest
       before_script:
         # - sudo apt-get update
