--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -9,7 +9,7 @@ settings:
     # bootstrap: bootstrap.php
     colors: true
     memory_limit: 1024M
-bootstrap: bootstrap.php
+bootstrap: acceptance/bootstrap.php
 # modules:
 #     config:
 #         WPWebDriver:
