front modules tests

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -17,6 +17,8 @@ class_name: AcceptanceTester
 # # modules:
 # #     enabled:
 # #         - WPWebDriver
+bootstrap: bootstrap.php
+
 
 # modules:
 #     enabled:
