--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -6,10 +6,9 @@ paths:
     data: tests/_data
     helpers: tests/_support
 settings:
-    # bootstrap: bootstrap.php
     colors: true
     memory_limit: 1024M
-bootstrap: acceptance/bootstrap.php
+# bootstrap: acceptance/bootstrap.php
 # modules:
 #     config:
 #         WPWebDriver:
