--- a/.travis.yml
+++ b/.travis.yml
@@ -166,10 +166,9 @@ script:
 
   # set the url in yml file(s) as per the test environment, we can use different yml files also but this is easy to setup and faster if we need to maintain single var 
   - edit_codeception_yml_file
-  - skdjhfkdhjsfkjh
   - php vendor/bin/codecept clean
-  - php vendor/bin/codecept build
-  - php vendor/bin/codecept run --steps --debug
+  # - php vendor/bin/codecept build
+  # - php vendor/bin/codecept run --steps --debug
 
   #echo the output 
   - echo_necessary_output
