front modules tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -168,8 +168,8 @@ script:
   - edit_codeception_yml_file
   
   - php vendor/bin/codecept clean
-  # - php vendor/bin/codecept build
-  # - php vendor/bin/codecept run --steps --debug
+  - php vendor/bin/codecept build
+  - php vendor/bin/codecept run --steps --debug
 
   #echo the output 
   - echo_necessary_output
