--- a/.travis.yml
+++ b/.travis.yml
@@ -106,8 +106,8 @@ before_script:
   # Install WordPress
   - source travis.sh
   - install-wordpress
-  - install_test_suite
-  - move_things
+  # - install_test_suite
+  # - move_things
   
   # Start up a web server.
   # - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
