--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ language: php
 
 php:
   - 7.2.3 
-  - 7.2.2 
+  # - 7.2.2 
 
 # env: WP_VERSION=latest
 before_script:
@@ -104,7 +104,7 @@ before_script:
     fi
 
   # Install WordPress
-  - source travis.sh
+  # - source travis.sh
   - install-wordpress
   # - install_test_suite
   # - move_things
