--- a/.travis.yml
+++ b/.travis.yml
@@ -104,7 +104,7 @@ before_script:
     fi
 
   # Install WordPress
-  # - source travis.sh
+  - source travis.sh
   - install-wordpress
   # - install_test_suite
   # - move_things
