--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,11 @@ before_script:
   # - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/000-default.conf
   # - sudo service apache2 restart
 
+  # Increase the shared memory mountpoint. Chrome or something in the tests is
+  # taking up more shared memory than is available which causes tests to fail.
+  # See https://github.com/SeleniumHQ/docker-selenium/issues/431
+  - sudo mount -o remount,size=32G /run/shm
+
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
     if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
