--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ env:
     - export WP_DEVELOP_DIR=/tmp/wordpress/src
     - export SERVER_ROOT_DIR=/
     - export WP_CORE_DIR=/tmp/wordpress/src
-    - export WP_CEPT_SERVER='127.0.0.1:8888'
+    # - export WP_CEPT_SERVER='127.0.0.1:8888'  #moved below
     
 # matrix:
 #   include:
@@ -117,6 +117,13 @@ before_script:
   # - install_test_suite
   # - move_things
   
+  - |
+    if [[ $(test_environment) == "WBC_TEST_ENV_default" ]]; then
+      export WP_CEPT_SERVER='127.0.0.1:8888'
+    else
+      export WP_CEPT_SERVER='127.0.0.1:4444'
+    fi
+
   # Start up a web server.
   # - php -S "$WP_CEPT_SERVER" -t "$WP_CORE_DIR" >/dev/null 2>&1 &
   - php -S "$WP_CEPT_SERVER" -t "$SERVER_ROOT_DIR" >/dev/null 2>&1 &
@@ -148,7 +155,7 @@ before_script:
       wget -c -nc --retry-connrefused --tries=0 https://selenium-release.storage.googleapis.com/3.141/selenium-server-standalone-3.141.59.jar -O selenium-server-standalone.jar
     fi
   
-  
+
   - echo "Download chromedriver"
   # # - wget https://chromedriver.storage.googleapis.com/74.0.3729.6/chromedriver_linux64.zip
   # - wget https://chromedriver.storage.googleapis.com/2.27/chromedriver_linux64.zip
