front modules tests

--- a/codeception.dist.php.7.2.yml
+++ b/codeception.dist.php.7.2.yml
@@ -22,3 +22,4 @@ modules:
             capabilities:
                 unexpectedAlertBehaviour: 'accept'
                 # firefox_profile: '~/firefox-profiles/codeception-profile.zip.b64'
+                acceptInsecureCerts: true
