--- a/tests/acceptance.suite.php.7.2.yml
+++ b/tests/acceptance.suite.php.7.2.yml
@@ -40,3 +40,4 @@ modules:
             capabilities:
                 unexpectedAlertBehaviour: 'accept'
                 # firefox_profile: '~/firefox-profiles/codeception-profile.zip.b64'
+                acceptInsecureCerts: true
