--- a/codeception.dist.php.7.2.yml
+++ b/codeception.dist.php.7.2.yml
@@ -21,5 +21,5 @@ modules:
             window_size: 1024x768
             capabilities:
                 unexpectedAlertBehaviour: 'accept'
-                # firefox_profile: '~/firefox-profiles/codeception-profile.zip.b64'
+                firefox_profile: '~/firefox-profiles/codeception-profile.zip.b64'
                 acceptInsecureCerts: true
