--- a/tests/acceptance.suite.php.7.2.yml
+++ b/tests/acceptance.suite.php.7.2.yml
@@ -31,7 +31,7 @@ modules:
         - \Helper\Acceptance
     config:
         WPWebDriver:
-            url: 'http://127.0.0.1:8888'
+            url: 'http://127.0.0.1:8888/tmp/WBC_TEST_ENV_with_sample_data/wordpress-latest-1'
             browser: firefox
             adminUsername: admin
             adminPassword: password
