--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -13,7 +13,7 @@ settings:
 modules:
     config:
         WPWebDriver:
-            url: 'http://127.0.0.1:8888'
+            url: 'http://127.0.0.1:8888/tmp/wordpress/src'
             browser: chrome
             adminUsername: admin
             adminPassword: password
