--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -31,7 +31,7 @@ modules:
         - \Helper\Acceptance
     config:
         WPWebDriver:
-            url: 'http://127.0.0.1:8888'
+            url: 'http://127.0.0.1:8888/tmp/wordpress/src'
             browser: chrome
             adminUsername: admin
             adminPassword: password
