--- a/codeception.dist.php.7.2.yml
+++ b/codeception.dist.php.7.2.yml
@@ -23,4 +23,4 @@ modules:
                 unexpectedAlertBehaviour: 'accept'
                 # firefox_profile: '/home/travis/build/EmptyOps/woocommerce-bundle-choice/tests/firefox-profiles/taken-from-mac/xdfltxm9.default.zip.b64'
                 acceptInsecureCerts: true
-                w3c: false
+                w3c: true
