--- a/.travis.yml
+++ b/.travis.yml
@@ -177,7 +177,7 @@ before_script:
     if [[ $(test_environment) == "WBC_TEST_ENV_default" ]]; then
       nohup bash -c "java -jar selenium-server-standalone.jar -Dwebdriver.chrome.driver=\"chromedriver\" -Dwebdriver.chrome.whitelistedIps=\"localhost\" &" && sleep 1;    
     else
-      nohup bash -c "java -jar -Dwebdriver.gecko.driver=\"geckodriver\" selenium-server-standalone.jar -enablePassThrough false &" && sleep 1;
+      nohup bash -c "java -jar selenium-server-standalone.jar -Dwebdriver.gecko.driver=\"geckodriver\" -enablePassThrough false &" && sleep 1;
     fi
 
 
