--- a/.travis.yml
+++ b/.travis.yml
@@ -155,7 +155,7 @@ before_script:
     if [[ $(test_environment) == "WBC_TEST_ENV_default" ]]; then
       wget -c -nc --retry-connrefused --tries=0 http://selenium-release.storage.googleapis.com/2.53/selenium-server-standalone-2.53.1.jar -O selenium-server-standalone.jar
     else
-      wget -c -nc --retry-connrefused --tries=0 https://repo1.maven.org/maven2/org/seleniumhq/selenium/selenium-server/3.7.1/selenium-server-3.7.1.jar -O selenium-server-standalone.jar
+      wget -c -nc --retry-connrefused --tries=0 http://selenium-release.storage.googleapis.com/3.7/selenium-server-standalone-3.7.1.jar -O selenium-server-standalone.jar
     fi
   
 
